2010-02-12  Karl Berry  <karl@gnu.org>

	* tex4ht-sty.tex: update license notices.
	* Makefile: add derivations.

2010-02-11  Karl Berry  <karl@gnu.org>

	* tex4ht-svg.tex: update license notices.
	* Makefile: add derivations.

	* All files so far: Put current (2010) copyright line first.

2010-02-10  Karl Berry  <karl@gnu.org>

	* tex4ht-t4ht.tex: update license notices.
	* Makefile: add derivations.

2010-02-09  Karl Berry  <karl@gnu.org>

	* tex4t-tei.tex: update license notices.
	* Makefile: add derivations.
	* tex4ht-cpright.tex: new macro |TeX4ht copywrite,
	to output the license notice with a \write to the log file.

2010-02-08  Karl Berry  <karl@gnu.org>

	* tex4ht-unicode.tex: update license notices.
	* Makefile: add derivations.

2010-02-07  Karl Berry  <karl@gnu.org>

	* tex4ht-word.tex: update license notices.
	* Makefile: add derivations.

2010-02-06  Karl Berry  <karl@gnu.org>

	* tex4ht-xhtml-xtpipes.tex: update license notices.
	* Makefile: add derivations.

	* tex4ht-xhtmml-xtpipes.tex,
	* xtpipes.tex: \message when running the lit sources doesn't
	seem useful.  Remove it.

2010-02-05  Karl Berry  <karl@gnu.org>

	* tex4ht-xhtmml-xtpipes.tex: update license notices.
	* Makefile: add derivations.

2010-02-03  Karl Berry  <karl@gnu.org>

	* wripro.tex: add license notice.

2010-02-02  Karl Berry  <karl@gnu.org>

	* xtpipes.tex: add derivation info and copyright messages
	to generated files.
	* tex4ht-cpright.tex: minimize lines.
	* Makefile: start at new file.

This file is public domain.  Started 2010, Karl Berry.