@@ -1,0 +1,32 @@
+% $Id$
+% A more few common TeX definitions for literate sources.  Not installed
+% in runtime.  These are only used in a few files, compared to those in
+% common.tex.  Do not know if any harm would come from including them always.
+% 
+% Copyright 2009, 2010 TeX Users Group.
+% Copyright 1996--2009 Eitan M. Gurari
+%
+% This work may be distributed and/or modified under the
+% conditions of the LaTeX Project Public License, either
+% version 1.3c of this license or (at your option) any
+% later version. The latest version of this license is in
+%   http://www.latex-project.org/lppl.txt
+% and version 1.3c or later is part of all distributions
+% of LaTeX version 2005/12/01 or later.
+%
+% This work has the LPPL maintenance status "maintained".
+%
+% The Current Maintainer of this work
+% is the TeX4ht Project <http://tug.org/tex4ht>.
+% 
+% If you modify this program, changing the 
+% version identification would be appreciated.
+
+\let\AltxModifyShowCode=\ModifyShowCode
+\def\ModifyShowCode{%
+   \def\by{by}\def\={=}\AltxModifyShowCode}
+
+\let\pReModifyOutputCode=\ModifyOutputCode
+\def\ModifyOutputCode{%
+   \def\by{}\def\={}%
+   \pReModifyOutputCode}
