@@ -1,3 +1,11 @@
+2010-02-13  Karl Berry  <karl@gnu.org>
+
+	* common-code.tex: new file.
+	* tex4ht-unicode.tex: use it.
+	
+	* tex4ht-options.tex: update license notices.
+	* Makefile: add derivations.	
+
 2010-02-12  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-sty.tex: update license notices.
